Fixed scope issue, added styling to solve.html

--- a/templates/solve.html
+++ b/templates/solve.html
@@ -1,5 +1,16 @@
-<h1>Test Solve Page</h1>
-<h2>Your solved puzzle</h2>
-{% for line in solved_puzzle %}
-    <p>{{ line }}</p>
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Solved Sudoku</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/solved.css') }}">
+</head>
+<body>
+    <h1 id="title">Puzzle Solved!</h1>
+    {% for line in solved_puzzle %}
+    <p id="solved">{{ line }}</p>
+    {% endfor %}
+</body>
+</html>
