--- a/templates/index.html
+++ b/templates/index.html
@@ -23,4 +23,10 @@
                     <button class="subbutton" type="submit" style="vertical-align:middle"><span>Solve!</span></button>
                 </form>
             </div>
+            <footer>
+                <a href="https://github.com/Krizsan0596/PySudoku" title="Source code on GitHub">
+                    <i class="fa fa-github"></i>
+                </a>
+            </footer>
+        </body>
 </html>
