--- a/templates/solve.html
+++ b/templates/solve.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/solved.css') }}">
 </head>
 <body>
-    <h1 id="title">Puzzle Solved!</h1>
+    <h1 id="solved">Puzzle Solved!</h1>
     {% for line in solved_puzzle %}
-    <p id="solved">{{ line }}</p>
+    <p id="puzzle">{{ line }}</p>
     {% endfor %}
+    <p>
+        <a href="{{ url_for('index') }}">
+            <button class="button">
+                <i class="fa fa-home"></i>
+            </button>
+        </a>
 </body>
 </html>
